fix: readabilty fix

--- a/src/components/camera-lens.css
+++ b/src/components/camera-lens.css
@@ -14,9 +14,12 @@
 .camera-lens.scanning {
 	border: 4px solid rgb(30 150 215 / 70%);
 }
-.camera-lens canvas {
+.camera-lens .canvas {
 	display:none;
 }
 .lens-feedback {
-	color: rgb(255 255 255 / 90%);
+	color: rgb(30 150 215 / 90%);
+	font-weight: bold;
+	margin-top: 1ex;
+	font-size: 3ex;
 }
